--- a/css/menu.css
+++ b/css/menu.css
@@ -9,7 +9,25 @@ body {
 }
 
 main {
-    width: 1280px;
-    height: 720px;
+    width: 1024px;
+    height: 657px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    color: burlywood;
     background-image: url(../assets/hubble-ultra-deep-field.jpeg);
+}
+
+li {
+    list-style-type: none;
+}
+
+a {
+    color: burlywood;
+    text-decoration-line: none;
+}
+
+a:hover {
+    text-decoration-line: underline;
 }
