--- a/css/menu.css
+++ b/css/menu.css
@@ -20,12 +20,26 @@ main {
     justify-content: space-around;
 }
 
-#game-title h1 {
-    font-size: 3rem;
+#game-title {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 #game-title h2 {
     font-size: 2rem;
+    text-shadow: -3px 3px 0 var(--secondary-color);
+}
+
+#game-title h1 {
+    font-size: 3rem;
+    color: whitesmoke;
+    text-shadow: 0 0 10px yellow;
+}
+
+#game-title h1 span {
+    color: red;
+    text-shadow: 6px 0 0 blue;
 }
 
 a {
@@ -52,7 +66,7 @@ li a {
 }
 
 li a:hover {
-    text-decoration-line: underline;
+    text-shadow: 0px 4px 20px black;
 }
 
 .info-card {
