--- a/css/menu.css
+++ b/css/menu.css
@@ -9,6 +9,8 @@
 
     color: var(--primary-color);
     background-image: url(../assets/hubble-ultra-deep-field.jpeg);
+
+    font-family: serif;
 }
 
 main {
@@ -47,21 +49,22 @@ a {
 }
 
 li {
+    list-style-type: none;
+}
+
+li a{
     display: flex;
     justify-content: center;
 
     margin: 8px 0px 8px 0px;
 
-    list-style-type: none;
     padding: 4px;
     border: 4px ridge var(--secondary-color);
     border-radius: 16px;
 
     color: var(--secondary-color);
     background-color: var(--primary-color);
-}
 
-li a {
     text-decoration-line: none;
 }
 
