--- a/css/setup.css
+++ b/css/setup.css
@@ -5,7 +5,7 @@
 
 :root {
   font-size: 16px;
-  --primary-font: serif;
+  --primary-typed-font: serif;
 
   --primary-color: burlywood;
   --secondary-color: #7e3d26;
