--- a/css/menu.css
+++ b/css/menu.css
@@ -1,4 +1,4 @@
-@import url(setup.css);
+@import url(global.css);
 
 #root {
     width: 100vw;
@@ -70,18 +70,4 @@ li a {
 
 li a:hover {
     text-shadow: 0px 4px 20px black;
-}
-
-.info-card {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-
-    max-width: 495px;
-
-    padding: 8px;
-    border: 4px ridge var(--secondary-color);
-
-    color: var(--secondary-color);
-    background-color: var(--primary-color);
 }
