--- a/css/game.css
+++ b/css/game.css
@@ -7,9 +7,8 @@
 }
 
 #info-screen {
-  width: 100%;
-  height: 100%;
-
+  width: 100vw;
+  height: auto;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -35,4 +34,8 @@
 
 .default-button:hover {
   text-shadow: 0px 4px 20px black;
+}
+
+.learn-more-gif {
+  width: 20%;
 }
