--- a/css/menu.css
+++ b/css/menu.css
@@ -13,6 +13,10 @@
     font-family: var(--primary-typed-font);
 }
 
+body {
+    background-image: url(../assets/hubble-ultra-deep-field.jpeg);
+}
+
 main {
     margin: 20px;
 
